--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "homepage": "https://dorota1997.github.io/react-frontend-dev-portfolio/",
+  "homepage": "https://github.com/CrazyLavendar",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
