--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
     "antd": "^4.15.6",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
@@ -15,10 +14,8 @@
     "react-awesome-slider": "^4.1.0",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
-    "react-ga": "^3.1.2",
     "react-image-file-resizer": "^0.4.4",
     "react-modal-video": "^1.2.6",
-    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-switch": "^5.0.1",
@@ -52,11 +49,7 @@
     "@iconify-icons/bi": "^1.1.5",
     "@iconify-icons/carbon": "^1.1.3",
     "@iconify-icons/gridicons": "^1.1.1",
-    "@iconify-icons/logos": "^1.1.9",
-    "@iconify-icons/mdi": "^1.1.15",
-    "@iconify/icons-logos": "^1.0.12",
     "@iconify/react": "^1.1.4",
-    "gh-pages": "^3.1.0",
-    "node-sass": "^4.14.1"
+    "gh-pages": "^3.1.0"
   }
 }
