--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-image-file-resizer": "^0.4.4",
     "react-modal-video": "^1.2.6",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^4.0.3",
     "react-switch": "^5.0.1",
     "react-typical": "^0.1.3",
     "react-vertical-timeline-component": "^3.3.1"
